mule-fundamentals/v/3.6/download-and-launch-anypoint-studio.adoc
= Download and Launch Anypoint Studio
:keywords: download, studio, server, test, deploy, applications

http://www.mulesoft.com/platform/mule-studio[image:StudioDownloada.png[StudioDownload]]

This introductory content focuses primarily on using *Anypoint Studio*, Mule graphical IDE.

For details on installing the Mule standalone runtime, the Mule Management Console, and Mule's Community runtime, refer to the comprehensive link:/mule-user-guide/v/3.6/installing[installation instructions]. 

. Before downloading and launching Anypoint Studio, install http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html[Java SE JDK 7].
+
See also: Running Studio on a Mac?

. Check to confirm that Java runtime environment 7 is in place on your system. From the command line (Terminal app for a Mac, Command Prompt for Windows), run: `java -version`
+
The response should appear similar to the following:
+
[source, code, linenums]
----
java version "1.7.0_75"
Java(TM) SE Runtime Environment (build 1.7.0_75-b13)
Java HotSpot(TM) 64-Bit Server VM (build 24.75-b04, mixed mode)
----
+
If a Java runtime environment is _not_ installed, install http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html[Java SE JDK 7].

. Visit http://www.mulesoft.com/platform/mule-studio[mulesoft.com] to download *Anypoint Studio*.

. Download the version of Studio that is compatible with your operating system: Windows, Mac, or Linux.
. Unzip the downloaded file to a directory on a hard drive located on your host machine. The *AnypointStudio* folder or directory appears when the unzip operation completes.
+
[NOTE]
In Windows, we recommend extracting it into 'C:\Anypoint Studio' or your local user folder 'C:\Users\{USERNAME}\Anypoint Studio'.
. Open Anypoint Studio:
.. *Mac*: Double-click the *AnypointStudio* file, located in the *AnypointStudio* folder.
.. *Windows*: Double-click the **AnypointStudio.exe** file, located in the *AnypointStudio* directory.
.. *Linux*: Double-click the *AnypointStudio* file icon, located in the *AnypointStudio* directory.
+
image:Studiofolderstructure.png[Studiofolderstructure]

. If the wrong version of Java is present on your computer, the following may occur after you start Studio:
.. *Mac*: The command triggers a prompt to install the JDK tools directly from Apple. Follow the instructions to download and install JDK 7. See: Running Studio on a Mac?
.. *Windows*: This message appears when you start Studio:
Incompatible JVM - Version _<number>_ of the JVM is not suitable for this product. Version 1.7 or greater is required.
Go to http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html[Java SE JDK 7], download JDK 7, and install it. Then restart AnypointStudio.exe from where you unzipped the software distribution.
. Click *OK* to accept the default workspace.
+
image:workspacelauncher.png[workspacelauncher]

. Anypoint Studio launches, then displays a Welcome page. Click *Create a Project* to begin development immediately.

== Running Studio on a Mac

By default, Mac OS X restricts execution of applications acquired outside the Apple App Store. Because you download Anypoint Studio _outside_ the App Store, your system may prevent you from running Anypoint Studio applications and issue a warning message advising you to change your security settings to proceed. If you have Administrator privileges, you can adjust the security settings under *System Preferences* > **Security & Privacy**. However, you can also right-click on the application to bypass the security warning and proceed to open the app.

== See Also

* **NEXT STEP:** Learn the link:/mule-fundamentals/v/3.6/anypoint-studio-essentials[essentials of Anypoint Studio].
* For details on installing the Mule standalone runtime, the Mule Management Console, and Mule's Community runtime, refer to the comprehensive link:/mule-user-guide/v/3.6/installing[installation instructions]. 
